--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^1.0.7
   image_cropper: ^5.0.1
   flutter_tts: ^4.0.1
+  google_ml_kit: ^0.16.3
+  translator: ^1.0.0
   
 
 dev_dependencies:
