--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_tts: ^4.0.1
   google_ml_kit: ^0.16.3
   translator: ^1.0.0
+  flutter_bloc: ^8.1.4
   
 
 dev_dependencies:
