--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_ml_kit: ^0.16.3
   translator: ^1.0.0
   flutter_bloc: ^8.1.4
+  connectivity_plus: ^6.0.1
   
 
 dev_dependencies:
